# zakops

./: .env.example  .gitignore  .labloop.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  agent.md  docker-compose.yml  pyproject.toml
apps/backend/: .env.example  dev-requirements.txt  pyproject.toml
apps/backend/infra/docker/: Dockerfile.api  docker-compose.yml
apps/backend/src/actions/: planner.py
apps/backend/src/actions/capabilities/: registry.py
apps/backend/src/actions/codex/: __init__.py  plan_spec.py
apps/backend/src/actions/context/: context_pack.py
apps/backend/src/actions/contracts/: plan_spec.py
apps/backend/src/actions/engine/: models.py  store.py  validation.py
apps/backend/src/actions/executors/: __init__.py  _artifacts.py  analysis_build_valuation_model.py  base.py  communication_draft_email.py  communication_send_email.py  deal_append_email_materials.py  deal_backfill_sender_history.py  deal_create_from_email.py  deal_dedupe_and_place_materials.py  deal_enrich_materials.py  deal_extract_email_artifacts.py  diligence_request_docs.py  document_generate_loi.py  email_triage_reject_email.py  email_triage_review_email.py  presentation_generate_pitch_deck.py  (+3 more)
apps/backend/src/core/: __init__.py  chat_benchmark.py  chat_budget.py  chat_cache.py  chat_evidence_builder.py  chat_llm_provider.py  chat_llm_router.py  chat_orchestrator.py  chat_smoke_test.py  chat_timing.py  deal_registry.py
apps/backend/src/workers/: actions_runner.py
apps/backend/tests/security/: test_owasp_api_top10.py  test_tenant_isolation.py
(+502 files in other folders)
