[project]
name = "zakops-backend"
version = "1.0.0"
description = "Backend services for ZakOps Deal Lifecycle OS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",  # line length (too many violations; enforce via formatter later)
    "E741",  # ambiguous variable name (common in math/data code)
    "E722",  # bare except (to be tightened incrementally)
    "E402",  # module-import-not-at-top (sys.path manipulation patterns)
    "N806",  # non-lowercase variable in function (constants in functions)
    "N818",  # exception name suffix (existing naming conventions)
]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
